# napari-superres

./: LICENSE  README.html  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: DESCRIPTION.html
docs/: index.md  single-frame-good-exposure.tif
src/napari_superres/: 22016SRRF.ipynb  ESI.py  ESI_notebook.ipynb  MSSR.py  __init__.py  _function.py  _gui_creator.py  core_decor.py  core_esi.py  core_mssr.py  core_mssr_numba.py  core_musical.py  core_sofi.py  core_srrf.py  deconvsk.py  finterp.py  my_popW.py  napari.yaml  napari_superres.py  srrf.py
src/napari_superres/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_widget.py  test_writer.py
src/resources/: raw7_100_PSFCHECK_561_DONUTS_33MS_5POWERL.tif
