[metadata]
name = napari-superres

author = Rocco D'Antuono
author_email = rocco.dantuono@hotmail.it
url = https://github.com/RoccoDAnt/napari-superres
license = BSD-3-Clause
description = Super-resolution napari plugins collection
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/RoccoDAnt/napari-superres/issues
    Documentation = https://github.com/RoccoDAnt/napari-superres#README.md
    Source Code = https://github.com/RoccoDAnt/napari-superres
    User Support = https://github.com/RoccoDAnt/napari-superres/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points]
napari.plugin =
    napari-superres = napari_superres
