[metadata]
name = napari-superres
version = 0.1.1
description = Fluorescence Fluctuation-based Super Resolution (FF-SRM) Methods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RoccoDAnt/napari-superres
author = Rocco D'Antuono, Adán Guerrero, Raúl Pinto Cámara, Paúl Hernández Herrera, Esley Torres Garcia, Haydee Hernández, Julián Mejía
author_email = rocco.dantuono@hotmail.it
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/RoccoDAnt/napari-superres/issues
    Documentation = https://github.com/RoccoDAnt/napari-superres#README.md
    Source Code = https://github.com/RoccoDAnt/napari-superres
    User Support = https://github.com/RoccoDAnt/napari-superres/issues

[options]
packages = find:
install_requires =
    matplotlib
    magicgui
    qtpy
    nanopyx >= 0.2.2
    tifffile


python_requires = >=3.9
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-superres = napari_superres:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
